    
    - Radiogroup element now inherits from Checkboxgroup, to remove duplicated
      code.
    
    - checkboxgroup_tag template file has been removed - Checkboxgroup now just
      uses radiogroup_tag file.
    
    - All non-english I18N packages now correctly "use utf8;"
    
    - load_config_file() now switches on Config-General's UTF8, so that files
      are correctly decoded.
    
    - Allow languages() to be a single value, rather than just an arrayref.
    
    - CompoundJoin filter now ignores empty values.
    
    - examples/unicode updated.
    
    - Manual-Unicode cat. config examples changed to use MyApp->config().
    
    - Stop warnings for undefined attributes - reported by Rod Taylor.
    
    - Documentation improvements by Ansgar Burchardt.

0.03003 2008-08-21

    - Form and elements inside template files now have access to original
      object via self.object
    
    - Having a named Multi block within a Block with nested_name set, now works.
    
    - New Element method is_block() which is true for Block elements.
    
    - Multi no longers sets is_field(0) - it's now true for both is_field() and is_block().
    
    - prereqs - set minimum version of Exporter.pm that exports import()

0.03002 2008-08-11

    - Deprecate element_defaults() method.
    
    - New default_args() method.
    
    - New CompoundSprintf filter.
    
    - New DateTime constraint.
    
    - New field method default_empty_value().
    
    - New I18N translations for Danish, French and Italian.
    
    - Added time_zone support to Inflator::DateTime
    
    - Documented that process() must be called before render() - this has
      been the case since 0.03000.

0.03001 2008-06-20

    - Require version 0.38 of DateTime, for string overloading support.

0.03000 2008-06-19

    - Field container_tag() now defaults to 'div' rather than 'span' to provide
      better layout without CSS.
    